--- a/templates/product-list.html
+++ b/templates/product-list.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block content %}
     <body>
@@ -239,7 +240,7 @@
                                                     <!-- single-product-wrap start -->
                                                     <div class="single-product-wrap">
                                                         <div class="product-image">
-                                                            <a href="single-product.html">
+                                                            <a href="{% url 'product-detail-url' item.id %}">
                                                                 <img src="{{ item.preview_image.url  }}" alt="Li's Product Image">
                                                             </a>
                                                             {% if now < item.new_expiry_date %}
@@ -262,7 +263,7 @@
                                                                         </ul>
                                                                     </div>
                                                                 </div>
-                                                                <h4><a class="product_name" href="single-product.html">Accusantium dolorem1</a></h4>
+                                                                <h4><a class="product_name" href="#">Accusantium dolorem1</a></h4>
                                                                 <div class="price-box">
                                                                     <span class="new-price">{{ item.get_price_with_sales }} сом</span>
                                                                 </div>
@@ -271,7 +272,7 @@
                                                                 <ul class="add-actions-link">
                                                                     <li class="add-cart active"><a href="shopping-cart.html">Add to cart</a></li>
                                                                     <li><a href="#" title="quick view" class="quick-view-btn" data-toggle="modal" data-target="#exampleModalCenter"><i class="fa fa-eye"></i></a></li>
-                                                                    <li><a class="links-details" href="favorites.html"><i class="fa fa-heart-o"></i></a></li>
+                                                                    <li><a class="links-details" href="{% url 'favorites-page-url' %}"><i class="fa fa-heart-o"></i></a></li>
                                                                 </ul>
                                                             </div>
                                                         </div>
